# Drone-Architecture

./: README.md
mavros_bridge_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mavros_bridge_ws/install/mavros_bridge_listener/lib/mavros_bridge_listener/: mavros_subscriber
mavros_bridge_ws/install/mavros_bridge_listener/share/mavros_bridge_listener/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
mavros_bridge_ws/log/: latest_build
mavros_bridge_ws/src/mavros_bridge_listener/: package.xml  setup.cfg  setup.py
mavros_bridge_ws/src/mavros_bridge_listener/mavros_bridge_listener/: mavros_subscriber_old.py
